--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,12 @@
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header{
+    background:#512DA8;
+    color: floralwhite;
+}
+
+.modal-body{
+    background:#D1C4E9;
+}
